crates/oxc_react_compiler/tests/snapshots/numeric-literal-as-object-property-key.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/numeric-literal-as-object-property-key.js
---
import { c as _c } from "react/compiler-runtime";
function Test() {
	const $ = _c(2);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = { 21: "dimaMachina" };
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	const obj = t0;
	const { 21: myVar } = obj;
	let t1;
	if ($[1] === Symbol.for("react.memo_cache_sentinel")) {
		t1 = <div>{obj[21]}{myVar}</div>;
		$[1] = t1;
	} else {
		t1 = $[1];
	}
	return t1;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Test,
	params: [{}]
};
