crates/oxc_react_compiler/tests/snapshots/numeric-object-keys.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/numeric-object-keys.js
---
import { c as _c } from "react/compiler-runtime";
function component(value) {
	const $ = _c(2);
	let t0;
	if ($[0] !== value) {
		t0 = {
			1e+21: value,
			1e-7: value,
			100000000000000000000: value,
			0.000001: value,
			16: value
		};
		$[0] = value;
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	return t0;
}
