crates/oxc_react_compiler/tests/snapshots/obj-literal-cached-in-if-else.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/obj-literal-cached-in-if-else.js
---
import { c as _c } from "react/compiler-runtime";
function foo(a, b, c, d) {
	const $ = _c(4);
	let x;
	if (someVal) {
		let t0;
		if ($[0] !== b) {
			t0 = { b };
			$[0] = b;
			$[1] = t0;
		} else {
			t0 = $[1];
		}
		x = t0;
	} else {
		let t0;
		if ($[2] !== c) {
			t0 = { c };
			$[2] = c;
			$[3] = t0;
		} else {
			t0 = $[3];
		}
		x = t0;
	}
	return x;
}
