crates/oxc_react_compiler/tests/snapshots/obj-literal-mutated-after-if-else.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/obj-literal-mutated-after-if-else.js
---
import { c as _c } from "react/compiler-runtime";
function foo(a, b, c, d) {
	const $ = _c(3);
	let x;
	if ($[0] !== b || $[1] !== c) {
		if (someVal) {
			x = { b };
		} else {
			x = { c };
		}
		x.f = 1;
		$[0] = b;
		$[1] = c;
		$[2] = x;
	} else {
		x = $[2];
	}
	return x;
}
