crates/oxc_react_compiler/tests/snapshots/obj-mutated-after-if-else.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/obj-mutated-after-if-else.js
---
import { c as _c } from "react/compiler-runtime";
function foo(a, b, c, d) {
	const $ = _c(2);
	someObj();
	let x;
	if ($[0] !== a) {
		if (a) {
			x = someObj();
		} else {
			x = someObj();
		}
		x.f = 1;
		$[0] = a;
		$[1] = x;
	} else {
		x = $[1];
	}
	return x;
}
