crates/oxc_react_compiler/tests/snapshots/object-computed-access-assignment.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/object-computed-access-assignment.js
---
function foo(a, b, c) {
	const x = { ...a };
	x[b] = c[b];
	x[3] = c[b * 4];
}
export const FIXTURE_ENTRYPOINT = {
	fn: foo,
	params: ["TodoAdd"],
	isComponent: "TodoAdd"
};
